改了一个文字

--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -68,7 +68,7 @@
                     </ion-slide>   
                     <ion-slide>
                       <img src="img/b5.png" alt="">
-                      <p class="banner-title"> YEEZY BOOST 320V2 纯白新款</p>
+                      <p class="banner-title"> YEEZY BOOST 320V2 纯白款</p>
                     </ion-slide>
                 </ion-slides> 
               <!-- </div> -->
